--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -30,4 +30,5 @@ COPY . ./
 ENV UDEV=1
 
 # server.js will run when container starts up on the device
-CMD ["npm", "start"]
+#CMD ["npm", "start"]
+CMD ["sleep", "infinity"]
