Add connection LED

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -30,5 +30,4 @@ COPY . ./
 ENV UDEV=1
 
 # server.js will run when container starts up on the device
-#CMD ["npm", "start"]
-CMD ["sleep", "infinity"]
+CMD ["npm", "start"]
