--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "dependencies": {
     "express": "*",
     "ejs": "*",
-    "socket.io": "*",
-    "socket.io-client": "*",
-    "onoff": "*"
+    "socket.io": "2.4.0",
+    "socket.io-client": "2.4.0",
+    "onoff": "6.0.3"
   }
 }
